fix scroll on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
 }
 body {
   margin: 0;
